--- a/index.html
+++ b/index.html
@@ -17,33 +17,62 @@
     </label>
     <div class="nav">
       <ul>
-        <li><a class="a">ACCUEIL</a></li>
-        <li><a class="a">MA PRATIQUE</a></li>
-        <li><a class="a">THERAPIES</a></li>
-        <li><a class="a">LE CABINET</a></li>
-        <li><a class="a">CONTACT</a></li>
+        <li><a href="#" class="a">ACCUEIL</a></li>
+        <li><a href="#" class="a">MA PRATIQUE</a></li>
+        <li><a href="#" class="a">THERAPIES</a></li>
+        <li><a href="#" class="a">LE CABINET</a></li>
+        <li><a href="#" class="a">CONTACT</a></li>
       </ul>
     </div>
   </div>
   <div class="nav_pc">
       <ul class="ul_pc">
-          <li class="li_pc"><a class="a">ACCUEIL</a></li>
-          <li class="li_pc"><a class="a">MA PRATIQUE</a></li>
-          <li class="li_pc"><a class="a">THERAPIES</a></li>
-          <li class="li_pc"><a class="a">LE CABINET</a></li>
-          <li class="li_pc"><a class="a">CONTACT</a></li>
+          <li class="li_pc"><a href="#" class="a">ACCUEIL</a></li>
+          <li class="li_pc"><a href="#pratique" class="a">MA PRATIQUE</a></li>
+          <li class="li_pc"><a href="#" class="a">THERAPIES</a></li>
+          <li class="li_pc"><a href="#" class="a">LE CABINET</a></li>
+          <li class="li_pc"><a href="#" class="a">CONTACT</a></li>
       </ul>
   </div>
   <div class="background">
         <div class="inside">
-            
+            <div class=in>
+                <div class="name">
+                    <h3 class="cabinet">CABINET</h3>
+                    <h2 class="name_psy">CHARLOTTE DURAND</h2>
+                    <br />
+                    <h1>- PSYCHOLOGUE CLINICIENNE -</h1>
+                    <h2 class="psycho">- PSYCHOTHERAPEUTE -</h2>
+                    <br />
+                    <h3>NOURRISSONS / ENFANTS / ADOLESCENDS / ADULTES / PARENTALITE</h3>
+                </div>
+                <div class="adresse">
+                    <p>IMMEUBLE "FEMME D'UN SIECLE"</p>
+                    <p>1ER ETAGE LOCAL 6</p>
+                    <p>3 BOULEVARD JACQUES DUCLOS</p>
+                    <p>40220 TARNOS</p>
+                </div>
+            </div>
         </div>
   </div>
-  <div class="pratique">
-      <p>kfzrjierhgjpiaejojogogeojjigrfjiqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq
-          kefzn,,,,,,jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj
+  <div id="pratique">
+      <h3 class="title">MA PRATIQUE</h3>
+      <h4>Qui suis_je ?</h4>
+      <p>Psychologue clinicienne de formation, je suis spécialisée dans la petite enfance, l'adolescence et la parentalité.
+          <br />
+          J'ai principalement exercé au sein d'institutions auprès d'enfants et d'adolescents ainsi qu'à l'hôpital.
+          <br />
+          Je suis inscrite dans le répertoire ADELI sous le numéro 40 93 04 839.
       </p>
-  </div>
+      <h4>Ma formation</h4>
+      <p>MASTER 2 "Psychopathologie clinique et psychanalyse" parcours "psychopathologie clinique infanto-juvénile et de la petite enfannce" à l'université de Rennes 2.</p>
+      <p>DIPLOME inter-universitaire "Adolescents difficiles" à l'Université de Brest.</p>
+      <p>FORMATION QUALIFIANTE "approche théorique et clinique de l'adoption" aux études psychanalitiques de Paris 7 Paris Diderot</p>
+      <p>FORMATION "Les adolescents auteurs de violences sexuelles" au CH Charles Perens, Bordeaux.</p>
+      <h4>UNE PRATIQUE ADAPTEE A CHACUN</h4>
+      <p>Formée à la psychanalyse, ma pratique s'appuie sur l'écoute et la singularité de la personne.</p>
+      <p>J'accueille avec neutralité et bienveillance toute personne en soufrance ou souhaitant une espace de parole à soi.</p>
+    </div>
 </body>
 
 </html>
