--- a/index.html
+++ b/index.html
@@ -51,27 +51,32 @@
                     <p>1ER ETAGE LOCAL 6</p>
                     <p>3 BOULEVARD JACQUES DUCLOS</p>
                     <p>40220 TARNOS</p>
+                    <a class="a_button" href="#contact"><button class="button_acc">Contact</button></a>
                 </div>
+                
             </div>
         </div>
   </div>
+  <br />
+  <br />
   <div id="pratique">
       <h3 class="title">MA PRATIQUE</h3>
-      <h4>Qui suis_je ?</h4>
-      <p>Psychologue clinicienne de formation, je suis spécialisée dans la petite enfance, l'adolescence et la parentalité.
+      <hr />
+      <h4 class="under_title">QUI SUIS-JE ?</h4>
+      <p class="pra">Psychologue clinicienne de formation, je suis spécialisée dans la petite enfance, l'adolescence et la parentalité.
           <br />
           J'ai principalement exercé au sein d'institutions auprès d'enfants et d'adolescents ainsi qu'à l'hôpital.
           <br />
           Je suis inscrite dans le répertoire ADELI sous le numéro 40 93 04 839.
       </p>
-      <h4>Ma formation</h4>
-      <p>MASTER 2 "Psychopathologie clinique et psychanalyse" parcours "psychopathologie clinique infanto-juvénile et de la petite enfannce" à l'université de Rennes 2.</p>
-      <p>DIPLOME inter-universitaire "Adolescents difficiles" à l'Université de Brest.</p>
-      <p>FORMATION QUALIFIANTE "approche théorique et clinique de l'adoption" aux études psychanalitiques de Paris 7 Paris Diderot</p>
-      <p>FORMATION "Les adolescents auteurs de violences sexuelles" au CH Charles Perens, Bordeaux.</p>
-      <h4>UNE PRATIQUE ADAPTEE A CHACUN</h4>
-      <p>Formée à la psychanalyse, ma pratique s'appuie sur l'écoute et la singularité de la personne.</p>
-      <p>J'accueille avec neutralité et bienveillance toute personne en soufrance ou souhaitant une espace de parole à soi.</p>
+      <h4 class="under_title">MA FORMATION</h4>
+      <p class="pra">MASTER 2 "Psychopathologie clinique et psychanalyse" parcours "psychopathologie clinique infanto-juvénile et de la petite enfannce" à l'université de Rennes 2.</p>
+      <p class="pra">DIPLOME inter-universitaire "Adolescents difficiles" à l'Université de Brest.</p>
+      <p class="pra">FORMATION QUALIFIANTE "approche théorique et clinique de l'adoption" aux études psychanalitiques de Paris 7 Paris Diderot</p>
+      <p class="pra">FORMATION "Les adolescents auteurs de violences sexuelles" au CH Charles Perens, Bordeaux.</p>
+      <h4 class="under_title">UNE PRATIQUE ADAPTEE A CHACUN</h4>
+      <p class="pra">Formée à la psychanalyse, ma pratique s'appuie sur l'écoute et la singularité de la personne.</p>
+      <p class="pra">J'accueille avec neutralité et bienveillance toute personne en soufrance ou souhaitant une espace de parole à soi.</p>
     </div>
 </body>
 
