--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  
   <div class="burger">
     <input type="checkbox" class="menu-btn" id="menu-btn">
     <label for="menu-btn" class="menu-icon">
@@ -59,6 +60,7 @@
   </div>
   <br />
   <br />
+  <div class="container">
   <div id="pratique">
       <h3 class="title">MA PRATIQUE</h3>
       <hr />
@@ -78,6 +80,7 @@
       <p class="pra">Formée à la psychanalyse, ma pratique s'appuie sur l'écoute et la singularité de la personne.</p>
       <p class="pra">J'accueille avec neutralité et bienveillance toute personne en soufrance ou souhaitant une espace de parole à soi.</p>
     </div>
+  </div>
 </body>
 
 </html>
