--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <div class="inside">
             <div class=in>
                 <div class="name">
+                    <img class="symbole" alt="symbole psychologue" src="symbole.jpg" />
                     <h3 class="cabinet">CABINET</h3>
                     <h2 class="name_psy">CHARLOTTE DURAND</h2>
                     <br />
