--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="nav">
       <ul>
         <li><a href="#" class="a">ACCUEIL</a></li>
-        <li><a href="#" class="a">MA PRATIQUE</a></li>
-        <li><a href="#" class="a">THERAPIES</a></li>
+        <li><a href="#pratique" class="a">MA PRATIQUE</a></li>
+        <li><a href="#therapie" class="a">THERAPIES</a></li>
         <li><a href="#" class="a">LE CABINET</a></li>
         <li><a href="#" class="a">CONTACT</a></li>
       </ul>
@@ -30,7 +30,7 @@
       <ul class="ul_pc">
           <li class="li_pc"><a href="#" class="a">ACCUEIL</a></li>
           <li class="li_pc"><a href="#pratique" class="a">MA PRATIQUE</a></li>
-          <li class="li_pc"><a href="#" class="a">THERAPIES</a></li>
+          <li class="li_pc"><a href="#therapie" class="a">THERAPIES</a></li>
           <li class="li_pc"><a href="#" class="a">LE CABINET</a></li>
           <li class="li_pc"><a href="#" class="a">CONTACT</a></li>
       </ul>
@@ -53,6 +53,7 @@
                     <p>1ER ETAGE LOCAL 6</p>
                     <p>3 BOULEVARD JACQUES DUCLOS</p>
                     <p>40220 TARNOS</p>
+                    <p class="tel">06.74.05.60.53</p>
                     <a class="a_button" href="#contact"><button class="button_acc">Contact</button></a>
                 </div>
                 
@@ -81,7 +82,39 @@
       <p class="pra">Formée à la psychanalyse, ma pratique s'appuie sur l'écoute et la singularité de la personne.</p>
       <p class="pra">J'accueille avec neutralité et bienveillance toute personne en soufrance ou souhaitant une espace de parole à soi.</p>
     </div>
+ 
+    <div id="therapie">
+      <h3 class="title">THERAPIES</h3>
+      <hr />
+      <div class="flex">
+          <div class="child">
+              <h4 class="under_title">ENFANTS</h4>
+              <p class="the">J'aide l'enfant qui manifeste des soucis d'ordre affectif, cognitif et / ou relationnel
+                pour l'accompagner au mieux dans son développement. Le premier rendez-vous sera organisé avec les parents.
+              </p>
+          </div>
+          <div class="teenager">
+              <h4 class="under_title">ADOLESCENTS</h4>
+              <p class="the">J'accompagne tout jeune à s'exprimer et à mettre des mots sur sa souffrance. Je le soutiens psychologiquement pour qu'il
+                puisse s'apaiser et se senter mieux.
+              </p>
+          </div>
+          <div class="adult">
+              <h4 class="under_title">ADULTES</h4>
+              <p class="the">Je soutiens toute personne en souffrance à exprimer son mal-être et ses affects. Je suis présente pour vous soutenir lors de tout évènement 
+                de votre vie. Je propose également un soutien à la parentalité.
+              </p>
+          </div>
+      </div>
+      <div class="seance">
+          <h4 class="under_title">SEANCE</h4>
+          <p class="the">La séance dure entre 30 et 50 minutes. Les honoraires sont de 50€. Les consulations ne sont pas encore prises en 
+            compte par la sécurité sociale. Je vous invite à vous renseigner auprès de votre mutuelle pour savoir si elle propose un remboursement.
+          </p>
+      </div>
+    </div>
   </div>
+</div>
 </body>
 
 </html>
