--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="#" class="a">ACCUEIL</a></li>
         <li><a href="#pratique" class="a">MA PRATIQUE</a></li>
         <li><a href="#therapie" class="a">THERAPIES</a></li>
-        <li><a href="#" class="a">LE CABINET</a></li>
+        <li><a href="#cabinet" class="a">LE CABINET</a></li>
         <li><a href="#" class="a">CONTACT</a></li>
       </ul>
     </div>
@@ -31,7 +31,7 @@
           <li class="li_pc"><a href="#" class="a">ACCUEIL</a></li>
           <li class="li_pc"><a href="#pratique" class="a">MA PRATIQUE</a></li>
           <li class="li_pc"><a href="#therapie" class="a">THERAPIES</a></li>
-          <li class="li_pc"><a href="#" class="a">LE CABINET</a></li>
+          <li class="li_pc"><a href="#cabinet" class="a">LE CABINET</a></li>
           <li class="li_pc"><a href="#" class="a">CONTACT</a></li>
       </ul>
   </div>
@@ -111,6 +111,23 @@
           <p class="the">La séance dure entre 30 et 50 minutes. Les honoraires sont de 50€. Les consulations ne sont pas encore prises en 
             compte par la sécurité sociale. Je vous invite à vous renseigner auprès de votre mutuelle pour savoir si elle propose un remboursement.
           </p>
+      </div>
+    </div>
+    <div id="cabinet">
+      <h3 class="title">CABINET</h3>
+      <hr />
+      <div class="cab">
+          <p class="the">Le cabinet se situe dans le centre ville de Tarnos. Il dispose d'un parking souterrain gratuit sous l'immeuble. Il est accessible par la 
+            ligne 2 du Trambus ainsi que le bus (lignes 40 - 104 - 106). Arrêt "femmes d'un siècle"
+          </p>
+          <div class="flex">
+              <div class="pic">
+
+              </div>
+              <div class="pic">
+                
+              </div>
+          </div>
       </div>
     </div>
   </div>
