--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
       <h4 class="under_title">UNE PRATIQUE ADAPTEE A CHACUN</h4>
       <p class="the">Formée à la psychanalyse, ma pratique s'appuie sur l'écoute et la singularité de la personne.</p>
       <p class="the">J'accueille avec neutralité et bienveillance toute personne en soufrance ou souhaitant une espace de parole à soi.</p>
+      <img class="rond" alt="feuilles" src="leaves.jpg" />
     </div>
     <div id="therapie">
       <h3 class="title">THERAPIES</h3>
@@ -116,6 +117,7 @@
           <p class="the">La séance dure entre 30 et 50 minutes. Les honoraires sont de 50€. Les consulations ne sont pas encore prises en 
             compte par la sécurité sociale. Je vous invite à vous renseigner auprès de votre mutuelle pour savoir si elle propose un remboursement.
           </p>
+          <img class="rond" alt="feuilles" src="leaves.jpg" />
       </div>
     </div>
     <div id="cabinet">
@@ -135,6 +137,7 @@
                 
               </div>
           </div>
+          <img class="rond trois" alt="feuilles" src="leaves.jpg" />
       </div>
     </div>
   </div>
