--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
             <div class=in>
                 <div class="name">
                     <img class="symbole" alt="symbole psychologue" src="symbole.jpg" />
-                    <h3 class="cabinet">CABINET</h3>
-                    <h2 class="name_psy">CHARLOTTE DURAND</h2>
+                    <p class="cabinet">CABINET</p>
+                    <h1 class="name_psy">CHARLOTTE DURAND</h1>
                     <br />
-                    <h1>- PSYCHOLOGUE CLINICIENNE -</h1>
+                    <h2 class="psycho">- PSYCHOLOGUE CLINICIENNE -</h2>
                     <h2 class="psycho">- PSYCHOTHERAPEUTE -</h2>
                     <br />
                     <h3>NOURRISSONS / ENFANTS / ADOLESCENDS / ADULTES / PARENTALITE</h3>
