--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <li class="li_pc"><a href="#therapie" class="a">THERAPIES</a></li>
           <li class="li_pc"><a href="#cabinet" class="a">LE CABINET</a></li>
           <li class="li_pc"><a href="#" class="a">CONTACT</a></li>
+          <li class="li_pc"><a href="#" class="a"><img class="docto" alt="doctolib" src="doctolib.jpg" /></a></li>
       </ul>
   </div>
   <div class="background">
