--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <h2 class="psycho">- PSYCHOLOGUE CLINICIENNE -</h2>
                     <h2 class="psycho">- PSYCHOTHERAPEUTE -</h2>
                     <br />
-                    <h3>NOURRISSONS / ENFANTS / ADOLESCENDS / ADULTES / PARENTALITE</h3>
+                    <h3>NOURRISSONS / ENFANTS / ADOLESCENTS / ADULTES / PARENTALITE</h3>
                 </div>
                 <div class="adresse">
                     <p>IMMEUBLE "FEMME D'UN SIECLE"</p>
