--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                   </p> 
               </div>
           </div>
-          <img class="rond trois" alt="feuilles" src="leaves.jpg" />
+          <img class="rond trois" alt="feuilles" src="menu.jpg" />
         </div>
     </div>
 </body>
