--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="script.js"></script>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Charlotte Durand Psychologue clinicienne et psychothérapeuthe à Tarnos" />
   <title>Psychologue Durand</title>
 </head>
 
