--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
   </div>
   <div class="nav_pc">
       <ul class="ul_pc">
-          <li class="li_pc"><a href="#" class="a">ACCUEIL</a></li>
-          <li class="li_pc"><a href="#pratique" class="a">MA PRATIQUE</a></li>
-          <li class="li_pc"><a href="#therapie" class="a">THERAPIES</a></li>
-          <li class="li_pc"><a href="#cabinet" class="a">LE CABINET</a></li>
-          <li class="li_pc"><a href="#contact" class="a">CONTACT</a></li>
+          <li class="li_pc"><a id="accueil" href="#" class="a">ACCUEIL</a></li>
+          <li class="li_pc"><a id="practice" href="#pratique" class="a">MA PRATIQUE</a></li>
+          <li class="li_pc"><a id="therapy" href="#therapie" class="a">THERAPIES</a></li>
+          <li class="li_pc"><a id="cabi" href="#cabinet" class="a">LE CABINET</a></li>
+          <li class="li_pc"><a id="cont" href="#contact" class="a">CONTACT</a></li>
           <li class="li_pc"><a href="#" class="a"><img class="docto" alt="doctolib" src="doctolib.jpg" /></a></li>
       </ul>
   </div>
-  <div class="background">
+  <div id="background" class="background">
         <div class="inside">
             <div class=in>
                 <div class="name">
