--- a/index.html
+++ b/index.html
@@ -76,52 +76,55 @@
       <div id="pratique">
           <h3 class="title">MA PRATIQUE</h3>
           <hr />
-          <h4 class="under_title">QUI SUIS-JE ?</h4>
-          <p class="the">Psychologue clinicienne de formation, je suis spécialisée dans la petite enfance, l'adolescence et la parentalité.
-              <br />
-              J'ai principalement exercé au sein d'institutions auprès d'enfants et d'adolescents ainsi qu'à l'hôpital.
-              <br />
-              Je suis inscrite dans le répertoire ADELI sous le numéro 40 93 04 839.
-          </p>
-          <h4 class="under_title">MA FORMATION</h4>
-          <p class="the">MASTER 2 "Psychopathologie clinique et psychanalyse" parcours "psychopathologie clinique infanto-juvénile et de la petite enfannce" à l'université de Rennes 2.</p>
-          <p class="the">DIPLOME inter-universitaire "Adolescents difficiles" à l'Université de Brest.</p>
-          <p class="the">FORMATION QUALIFIANTE "approche théorique et clinique de l'adoption" aux études psychanalitiques de Paris 7 Paris Diderot</p>
-          <p class="the">FORMATION "Les adolescents auteurs de violences sexuelles" au CH Charles Perens, Bordeaux.</p>
-          <h4 class="under_title">UNE PRATIQUE ADAPTEE A CHACUN</h4>
-          <p class="the">Formée à la psychanalyse, ma pratique s'appuie sur l'écoute et la singularité de la personne.</p>
-          <p class="the">J'accueille avec neutralité et bienveillance toute personne en soufrance ou souhaitant une espace de parole à soi.</p>
-      </div>
+          <div class="englobe">
+              <h4 class="under_title">QUI SUIS-JE ?</h4>
+              <p class="the">Psychologue clinicienne de formation, je suis spécialisée dans la petite enfance, l'adolescence et la parentalité.
+                  <br />
+                  J'ai principalement exercé au sein d'institutions auprès d'enfants et d'adolescents ainsi qu'à l'hôpital.
+                  <br />
+                  Je suis inscrite dans le répertoire ADELI sous le numéro 40 93 04 839.
+              </p>
+              <h4 class="under_title">MA FORMATION</h4>
+              <p class="the">MASTER 2 "Psychopathologie clinique et psychanalyse" parcours "psychopathologie clinique infanto-juvénile et de la petite enfannce" à l'université de Rennes 2.</p>
+              <p class="the">DIPLOME inter-universitaire "Adolescents difficiles" à l'Université de Brest.</p>
+              <p class="the">FORMATION QUALIFIANTE "approche théorique et clinique de l'adoption" aux études psychanalitiques de Paris 7 Paris Diderot</p>
+              <p class="the">FORMATION "Les adolescents auteurs de violences sexuelles" au CH Charles Perens, Bordeaux.</p>
+              <h4 class="under_title">UNE PRATIQUE ADAPTEE A CHACUN</h4>
+              <p class="the">Formée à la psychanalyse, ma pratique s'appuie sur l'écoute et la singularité de la personne.</p>
+              <p class="the">J'accueille avec neutralité et bienveillance toute personne en soufrance ou souhaitant une espace de parole à soi.</p>
+            </div>
+        </div>
       <div id="therapie">
           <h3 class="title">THERAPIES</h3>
           <hr />
-          <div class="flex">
-              <div class="child">
-                  <h4 class="under_title">ENFANTS</h4>
-                  <p class="the">J'aide l'enfant qui manifeste des soucis d'ordre affectif, cognitif et / ou relationnel
-                    pour l'accompagner au mieux dans son développement. Le premier rendez-vous sera organisé avec les parents.
-                  </p>
+          <div class="englobe">
+              <div class="flex">
+                  <div class="child">
+                      <h4 class="under_title">ENFANTS</h4>
+                      <p class="the">J'aide l'enfant qui manifeste des soucis d'ordre affectif, cognitif et / ou relationnel
+                        pour l'accompagner au mieux dans son développement. Le premier rendez-vous sera organisé avec les parents.
+                      </p>
+                  </div>
+                  <div class="teenager">
+                      <h4 class="under_title">ADOLESCENTS</h4>
+                      <p class="the">J'accompagne tout jeune à s'exprimer et à mettre des mots sur sa souffrance. Je le soutiens psychologiquement pour qu'il
+                        puisse s'apaiser et se senter mieux.
+                      </p>
+                  </div>
+                  <div class="adult">
+                      <h4 class="under_title">ADULTES</h4>
+                      <p class="the">Je soutiens toute personne en souffrance à exprimer son mal-être et ses affects. Je suis présente pour vous soutenir lors de tout évènement 
+                        de votre vie. Je propose également un soutien à la parentalité.
+                      </p>
+                  </div>
               </div>
-              <div class="teenager">
-                  <h4 class="under_title">ADOLESCENTS</h4>
-                  <p class="the">J'accompagne tout jeune à s'exprimer et à mettre des mots sur sa souffrance. Je le soutiens psychologiquement pour qu'il
-                    puisse s'apaiser et se senter mieux.
-                  </p>
-              </div>
-              <div class="adult">
-                  <h4 class="under_title">ADULTES</h4>
-                  <p class="the">Je soutiens toute personne en souffrance à exprimer son mal-être et ses affects. Je suis présente pour vous soutenir lors de tout évènement 
-                    de votre vie. Je propose également un soutien à la parentalité.
+              <div class="seance">
+                  <h4 class="under_title">SEANCE</h4>
+                  <p class="the">La séance dure entre 30 et 50 minutes. Les honoraires sont de 50€. Les consulations ne sont pas encore prises en 
+                    compte par la sécurité sociale. Je vous invite à vous renseigner auprès de votre mutuelle pour savoir si elle propose un remboursement.
                   </p>
               </div>
           </div>
-          <div class="seance">
-              <h4 class="under_title">SEANCE</h4>
-              <p class="the">La séance dure entre 30 et 50 minutes. Les honoraires sont de 50€. Les consulations ne sont pas encore prises en 
-                compte par la sécurité sociale. Je vous invite à vous renseigner auprès de votre mutuelle pour savoir si elle propose un remboursement.
-              </p>
-          </div>
-      
       </div>
       <div id="cabinet">
         <br />
