--- a/index.html
+++ b/index.html
@@ -146,14 +146,12 @@
             
         </div>
       </div>
-      <br />
-      <br />
-      <br />
-      <div id="contact">
-        <h3 class="title">CONTACT</h3>
+  
+      <div >
+        <h3 id="contact"class="title">CONTACT</h3>
         <hr />
         <br />
-        <div class="flex">
+        <div id="contact2" class="flex">
           
             <div class="inner">
                 <h2 class="center">Prise de Rendez-Vous sur doctolib.</h2>
