--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <h3 id="contact"class="title">CONTACT</h3>
         <hr />
         <br />
-        <div id="contact2" class="flex">
+        <div class="flex">
           
             <div class="inner">
                 <h2 class="center">Prise de Rendez-Vous sur doctolib.</h2>
