--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
         </div>
       </div>
   
-      <div >
-        <h3 id="contact"class="title">CONTACT</h3>
+      <div id="contact">
+        <h3 class="title">CONTACT</h3>
         <hr />
         <br />
         <div class="flex">
