--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                   Je suis inscrite dans le répertoire ADELI sous le numéro 40 93 04 839.
               </p>
               <h4 class="under_title">MA FORMATION</h4>
-              <p class="the forma">MASTER 2 "Psychopathologie clinique et psychanalyse" parcours "psychopathologie clinique infanto-juvénile et de la petite enfannce" à l'université de Rennes 2.</p>
-              <p class="the forma">DIPLOME inter-universitaire "Adolescents difficiles" à l'Université de Brest.</p>
-              <p class="the forma">FORMATION QUALIFIANTE "approche théorique et clinique de l'adoption" aux études psychanalitiques de Paris 7 Paris Diderot</p>
-              <p class="the forma">FORMATION "Les adolescents auteurs de violences sexuelles" au CH Charles Perens, Bordeaux.</p>
+              <p class="the">MASTER 2 "Psychopathologie clinique et psychanalyse" parcours "psychopathologie clinique infanto-juvénile et de la petite enfannce" à l'université de Rennes 2.</p>
+              <p class="the">DIPLOME inter-universitaire "Adolescents difficiles" à l'Université de Brest.</p>
+              <p class="the">FORMATION QUALIFIANTE "approche théorique et clinique de l'adoption" aux études psychanalitiques de Paris 7 Paris Diderot</p>
+              <p class="the">FORMATION "Les adolescents auteurs de violences sexuelles" au CH Charles Perens, Bordeaux.</p>
               <h4 class="under_title">UNE PRATIQUE ADAPTEE A CHACUN</h4>
               <p class="the">Formée à la psychanalyse, ma pratique s'appuie sur l'écoute et la singularité de la personne.</p>
               <p class="the">J'accueille avec neutralité et bienveillance toute personne en soufrance ou souhaitant une espace de parole à soi.</p>
