--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   Je suis inscrite dans le répertoire ADELI sous le numéro 40 93 04 839.
               </p>
               <h4 class="under_title">MA FORMATION</h4>
-              <p class="the">MASTER 2 "Psychopathologie clinique et psychanalyse" parcours "psychopathologie clinique infanto-juvénile et de la petite enfannce" à l'université de Rennes 2.</p>
+              <p class="the">MASTER 2 "Psychopathologie clinique et psychanalyse" parcours "psychopathologie clinique infanto-juvénile et de la petite enfance" à l'université de Rennes 2.</p>
               <p class="the">DIPLOME inter-universitaire "Adolescents difficiles" à l'Université de Brest.</p>
               <p class="the">FORMATION QUALIFIANTE "approche théorique et clinique de l'adoption" aux études psychanalitiques de Paris 7 Paris Diderot</p>
               <p class="the">FORMATION "Les adolescents auteurs de violences sexuelles" au CH Charles Perens, Bordeaux.</p>
