--- a/index.html
+++ b/index.html
@@ -120,9 +120,12 @@
                       </p>
                   </div>
               </div>
+              <br />
+              <br />
+              <br />
               <div class="seance">
                   <h4 class="under_title">SEANCE</h4>
-                  <p class="the">La séance dure entre 30 et 50 minutes. Les honoraires sont de 50€. Les consulations ne sont pas encore prises en 
+                  <p class="the">La séance dure entre 30 et 50 minutes. Les honoraires sont de 50€. Les consulations ne sont pas prises en 
                     compte par la sécurité sociale. Je vous invite à vous renseigner auprès de votre mutuelle pour savoir si elle propose un remboursement.
                   </p>
               </div>
