--- a/index.html
+++ b/index.html
@@ -71,11 +71,9 @@
         </div>
   </div>
   <br />
-  <br />
-  <br />
   <div class="container">
       <div id="pratique">
-          <h3 class="title">MA PRATIQUE</h3>
+          <h3 class="title more">MA PRATIQUE</h3>
           <hr />
           <div class="englobe">
               <h4 class="under_title">QUI SUIS-JE ?</h4>
