--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               <br />
               <br />
               <div class="seance">
-                  <h4 class="under_title">LA SEANCE</h4>
+                  <h4 class="under_title more">LA SEANCE</h4>
                   <p class="the">La séance dure entre 30 et 50 minutes. Les honoraires sont de 50€. Les consulations ne sont pas prises en 
                     compte par la sécurité sociale. Je vous invite à vous renseigner auprès de votre mutuelle pour savoir si elle propose un remboursement.
                   </p>
@@ -133,7 +133,7 @@
    
       <div id="cabinet">
         <br />
-        <h3 class="title">LE CABINET</h3>
+        <h3 class="title ">LE CABINET</h3>
         <hr />
         <br />
         <div class="cab">
