--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               <br />
               <br />
               <div class="seance">
-                  <h4 class="under_title more">LA SEANCE</h4>
+                  <h4 class="under_title">LA SEANCE</h4>
                   <p class="the">La séance dure entre 30 et 50 minutes. Les honoraires sont de 50€. Les consulations ne sont pas prises en 
                     compte par la sécurité sociale. Je vous invite à vous renseigner auprès de votre mutuelle pour savoir si elle propose un remboursement.
                   </p>
@@ -137,6 +137,9 @@
         <hr />
         <br />
         <div class="cab">
+            <p class="the">Le cabinet se situe dans le centre ville de Tarnos. Il dispose d'un parking souterrain gratuit sous l'immeuble. Il est accessible par la 
+              ligne 2 du Trambus ainsi que le bus (lignes 40 - 104 - 106). Arrêt "femmes d'un siècle"
+            </p>
             <div class="flex">
                 <div class="pic">
 
