--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
    
       <div id="cabinet">
         <br />
-        <h3 class="title more">LE CABINET</h3>
+        <h3 class="title">CABINET</h3>
         <hr />
         <br />
         <div class="cab">
