--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <br />
   <div class="container">
       <div id="pratique">
-          <h3 class="title more">MA PRATIQUE</h3>
+          <h3 class="title more1">MA PRATIQUE</h3>
           <hr />
           <div class="englobe">
               <h4 class="under_title">QUI SUIS-JE ?</h4>
@@ -133,7 +133,7 @@
    
       <div id="cabinet">
         <br />
-        <h3 class="title more">CABINET</h3>
+        <h3 class="title more2">CABINET</h3>
         <hr />
         <br />
         <div class="cab">
