--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
           <li class="li_pc"><a id="therapy" href="#therapie" class="a">THERAPIES</a></li>
           <li class="li_pc"><a id="cabi" href="#cabinet" class="a">LE CABINET</a></li>
           <li class="li_pc"><a id="cont" href="#contact" class="a">CONTACT</a></li>
-          <li class="li_pc"><a href="#" class="a"><img class="docto" alt="doctolib" src="doctolib.jpg" /></a></li>
       </ul>
   </div>
   <div id="background" class="background">
@@ -71,6 +70,8 @@
         </div>
   </div>
   <br />
+  <p class="right"><a href="#" class="a"><img class="docto" alt="doctolib" src="doctolib.jpg" /></a></p>
+  <p class="absolute">Psychologue Durand</p>
   <div class="container">
       <div id="pratique">
           <h3 class="title more1">MA PRATIQUE</h3>
@@ -165,7 +166,7 @@
             <div class="inner">
               <p class="font2 big3"><span><i class="fas fa-house-user"></i></span>
                   <span class="inline_b">
-                      <span class="contact">Résidence "Femmes d'un siècle" </span>
+                      <span class="contact">Immeuble "Femmes d'un siècle" </span>
                       <br />
                       <span class="contact">local 5 - 1er étage</span>
                       <br />
