menu-barre char dura

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
   <br />
   <p class="right"><a href="#" class="a"><img class="docto" alt="doctolib" src="doctolib.jpg" /></a></p>
-  <p class="absolute">Psychologue Durand</p>
+  <p class="absolute">PSYCHOLOGUE <br />CHARLOTE DURAND</p>
   <div class="container">
       <div id="pratique">
           <h3 class="title more1">MA PRATIQUE</h3>
