--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
   </div>
   <div class="nav_pc">
       <ul class="ul_pc">
-          <li class="li_pc"><a id="accueil" href="#" class="a">ACCUEIL</a></li>
-          <li class="li_pc"><a id="practice" href="#pratique" class="a">MA PRATIQUE</a></li>
-          <li class="li_pc"><a id="therapy" href="#therapie" class="a">THERAPIES</a></li>
-          <li class="li_pc"><a id="cabi" href="#cabinet" class="a">LE CABINET</a></li>
-          <li class="li_pc"><a id="cont" href="#contact" class="a">CONTACT</a></li>
+          <li class="li_pc"><a id="accueil" href="#" class="a under">ACCUEIL</a></li>
+          <li class="li_pc"><a id="practice" href="#pratique" class="a under">MA PRATIQUE</a></li>
+          <li class="li_pc"><a id="therapy" href="#therapie" class="a under">THERAPIES</a></li>
+          <li class="li_pc"><a id="cabi" href="#cabinet" class="a under">LE CABINET</a></li>
+          <li class="li_pc"><a id="cont" href="#contact" class="a under">CONTACT</a></li>
       </ul>
   </div>
   <div id="background" class="background">
