--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </div>
   <br />
   <p class="right"><a href="#" class="a"><img class="docto" alt="doctolib" src="doctolib.jpg" /></a></p>
-  <p class="absolute">PSYCHOLOGUE <br />CHARLOTE DURAND</p>
+  <a href="#" ><p class="absolute">Psychologue <br />Charlotte Durand</p></a>
   <div class="container">
       <div id="pratique">
           <h3 class="title more1">MA PRATIQUE</h3>
