--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       </div>
   
       <div id="contact">
-        <h3 class="title">CONTACT</h3>
+        <h3 class="title more_contact">CONTACT</h3>
         <hr />
         <br />
         <div class="flex">
