ajout logo doctolib

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
         <div class="flex">
           
             <div class="inner">
-                <h2 class="center">Prise de Rendez-Vous sur doctolib.</h2>
-                <p><a class="link" href="#">Cliquer ici pour être rediriger sur Doctolib.</a></p> 
+                <h2 class="center">Veuillez cliquer sur le logo ci-dessous pour prendre rendez-vous :</h2>
+                <p><a class="link" href="#"><img class="doctol" alt="lien doctolib" src="docto.svg" /></a></p> 
             </div>
             <div class="inner">
               <p class="font2 big3"><span><i class="fas fa-house-user"></i></span>
