--- a/index.html
+++ b/index.html
@@ -157,30 +157,30 @@
         <div class="flex">
           
             <div class="inner">
-                <h2 class="center">Veuillez cliquer sur le logo ci-dessous pour prendre rendez-vous :</h2>
+                <h2 class="center the">Veuillez cliquer sur le logo ci-dessous pour prendre rendez-vous :</h2>
                 <p><a class="link" href="#"><img class="doctol" alt="lien doctolib" src="docto.svg" /></a></p> 
             </div>
             <div class="inner">
               <p class="font2 big3"><span><i class="fas fa-house-user"></i></span>
                   <span class="inline_b">
-                      <span class="contact">Immeuble "Femmes d'un siècle" </span>
+                      <span class="contact the">Immeuble "Femmes d'un siècle" </span>
                       <br />
-                      <span class="contact">local 5 - 1er étage</span>
+                      <span class="contact the">local 5 - 1er étage</span>
                       <br />
-                      <span class="contact">3, Boulevard Jacques Duclos</span>
+                      <span class="contact the">3, Boulevard Jacques Duclos</span>
                       <br />
-                      <span class="contact">40 220 TARNOS</span>
+                      <span class="contact the">40 220 TARNOS</span>
                   </span>
               </p> 
             </div>
               <div class="inner">
                   <p class="font2 big3"><span><i class="fas fa-bus"></i></span>
                       <span class="inline_b">
-                          <span class="contact">Trambus ligne 2 </span>
+                          <span class="contact the">Trambus ligne 2 </span>
                           <br />
-                          <span class="contact">Bus lignes 40 - 104 - 106</span>
+                          <span class="contact the">Bus lignes 40 - 104 - 106</span>
                           <br />
-                          <span class="contact">Arrêt : Femmes d'un siècle</span>
+                          <span class="contact the">Arrêt : Femmes d'un siècle</span>
                       </span>
                   </p> 
               </div>
