modif tel design

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
               <p class="the">J'accueille avec neutralité et bienveillance toute personne en soufrance ou souhaitant une espace de parole à soi.</p>
             </div>
         </div>
+        <img class="rond trois none" alt="feuilles" src="menu.jpg" />
         <div id="therapie">
           <h3 class="title">THERAPIES</h3>
           <hr />
