--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           
             <div class="inner">
                 <h2 class="center the">Veuillez cliquer sur le logo ci-dessous pour prendre rendez-vous :</h2>
-                <p><a class="link" href="#"><img class="doctol" alt="lien doctolib" src="docto.svg" /></a></p> 
+                <p><a class="link" href="#"><img class="doctol" alt="lien doctolib" src="docto.jpg" /></a></p> 
             </div>
             <div class="inner">
               <p class="font2 big3"><span><i class="fas fa-house-user"></i></span>
