doctolib on phone

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
       </ul>
   </div>
   <div id="background" class="background">
+
         <div class="inside">
+          <a href="#" ><img class="docto2"  alt="doctolib" src="doctolib.jpg" /></a>
             <div class=in>
                 <div class="name">
                     <img class="symbole" alt="symbole psychologue" src="symbole.jpg" />
@@ -67,7 +69,7 @@
         </div>
   </div>
   <br />
-  <p class="right"><a href="#" class="a"><img class="docto" alt="doctolib" src="doctolib.jpg" /></a></p>
+  <p class="right"><a href="#" class="a"><img class="docto" alt="doctolib" src="doctolib.jpg" /></p>
   <a href="#" ><p class="absolute">Psychologue <br />Charlotte Durand</p></a>
   <div class="container">
       <div id="pratique">
