--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" type="text-css" href="fav.jpg" />
+  <link rel="shortcut icon" type="text-css" href="favicon.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <script
 			  src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -70,7 +70,7 @@
   </div>
   <br />
   <p class="right"><a href="#" class="a"><img class="docto" alt="doctolib" src="doctolib.jpg" /></p>
-  <a href="#" ><p class="absolute">Psychologue <br />Charlotte Durand</p></a>
+  <a href="#" ><p class="absolute">Psychologue<br />Charlotte Durand</p></a>
   <div class="container">
       <div id="pratique">
           <h3 class="title more1">MA PRATIQUE</h3>
