--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
   </div>
   <div class="nav_pc">
       <ul class="ul_pc">
-          <li class="li_pc"><a id="accueil" href="#" class="a under">ACCUEIL</a></li>
           <li class="li_pc"><a id="practice" href="#pratique" class="a under">MA PRATIQUE</a></li>
           <li class="li_pc"><a id="therapy" href="#therapie" class="a under">THERAPIES</a></li>
           <li class="li_pc"><a id="cabi" href="#cabinet" class="a under">LE CABINET</a></li>
@@ -61,7 +60,7 @@
                 </div>
                 <div class="adresse">
                     <p>40220 TARNOS</p>
-                    <p class="tel">06.74.05.60.53</p>
+                    <p class="tel">06 74 05 60 53</p>
                     <a class="a_button" href="#contact"><button class="button_acc">Contact</button></a>
                 </div>
                 
@@ -70,7 +69,7 @@
   </div>
   <br />
   <p class="right"><a href="#" class="a"><img class="docto" alt="doctolib" src="doctolib.jpg" /></p>
-  <a href="#" ><p class="absolute">Psychologue<br />Charlotte Durand</p></a>
+  <a href="#" ><p class="absolute">- Psychologue clinicienne -<br />Charlotte Durand</p></a>
   <div class="container">
       <div id="pratique">
           <h3 class="title more1">MA PRATIQUE</h3>
