--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
                     <img class="symbole" alt="symbole psychologue" src="symbole.jpg" />
                     <p class="cabinet">CABINET</p>
                     <h1 class="name_psy">CHARLOTTE DURAND</h1>
-                  
-                    <h2 class="psycho">- PSYCHOLOGUE CLINICIENNE -</h2>
-                    <h2 class="psycho">- PSYCHOTHERAPEUTE -</h2>
+                    <h2 class="psycho1">- PSYCHOLOGUE CLINICIENNE -</h2>
+                    <h2 class="psycho2">- PSYCHOTHERAPEUTE -</h2>
                     <br />
                     <h3>NOURRISSONS / ENFANTS / ADOLESCENTS / ADULTES / PARENTALITE</h3>
                 </div>
@@ -76,21 +75,16 @@
           <hr />
           <div class="englobe">
               <h4 class="under_title">QUI SUIS-JE ?</h4>
-              <p class="the">Psychologue clinicienne de formation, je suis spécialisée dans la petite enfance, l'adolescence et la parentalité.
-                  <br />
-                  J'ai principalement exercé au sein d'institutions auprès d'enfants et d'adolescents ainsi qu'à l'hôpital.
-                  <br />
-                  Je suis inscrite dans le répertoire ADELI sous le numéro 40 93 04 839.
+              <p class="the">Psychologue clinicienne de formation, je suis spécialisée dans la petite enfance, l'adolescence et la parentalité.     
               </p>
-              <br />
+              <p class="the">J'ai principalement exercé au sein d'institutions auprès d'enfants et d'adolescents ainsi qu'à l'hôpital. </p>
               <h4 class="under_title">MA FORMATION</h4>
-              <p class="the">MASTER 2 "Psychopathologie clinique et psychanalyse" parcours "psychopathologie clinique infanto-juvénile et de la petite enfance" à l'université de Rennes 2.</p>
-              <p class="the">DIPLOME inter-universitaire "Adolescents difficiles" à l'Université de Brest.</p>
-              <p class="the">FORMATION QUALIFIANTE "approche théorique et clinique de l'adoption" aux études psychanalitiques de Paris 7 Paris Diderot</p>
-              <p class="the">FORMATION "Les adolescents auteurs de violences sexuelles" au CH Charles Perens, Bordeaux.</p>
-              <br />
+              <p class="the"><u>MASTER 2</u> "Psychopathologie clinique et psychanalyse" parcours "psychopathologie clinique infanto-juvénile et de la petite enfance" à l'université de Rennes 2.</p>   
+              <p class="the"><u>DIPLOME inter-universitaire</u> "Adolescents difficiles" à l'Université de Brest.</p>
+              <p class="the"><u>FORMATION QUALIFIANTE</u> "approche théorique et clinique de l'adoption" aux études psychanalitiques de Paris 7 Paris Diderot</p>   
+              <p class="the"><u>FORMATION</u> "Les adolescents auteurs de violences sexuelles" au CH Charles Perens, Bordeaux.</p>       
               <h4 class="under_title">UNE PRATIQUE ADAPTEE A CHACUN</h4>
-              <p class="the">Formée à la psychanalyse, ma pratique s'appuie sur l'écoute et la singularité de la personne.</p>
+              <p class="the">Formée à la psychanalyse, ma pratique s'appuie sur l'écoute et la singularité de la personne.</p>  
               <p class="the">J'accueille avec neutralité et bienveillance toute personne en soufrance ou souhaitant une espace de parole à soi.</p>
             </div>
         </div>
@@ -120,11 +114,10 @@
                   </div>
               </div>
               <br />
-              <br />
-              <br />
+           
               <div class="seance">
                   <h4 class="under_title">LA SEANCE</h4>
-                  <p class="the">La séance dure entre 30 et 50 minutes. Les honoraires sont de 50€. Les consulations ne sont pas prises en 
+                  <p class="the within">La séance dure entre 30 et 50 minutes. Les honoraires sont de 50€. Les consulations ne sont pas prises en 
                     compte par la sécurité sociale. Je vous invite à vous renseigner auprès de votre mutuelle pour savoir si elle propose un remboursement.
                   </p>
               </div>
