--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
           <hr />
           <div class="englobe">
               <h4 class="under_title">QUI SUIS-JE ?</h4>
-              <p class="the">Psychologue clinicienne de formation, je suis spécialisée dans la petite enfance, l'adolescence et la parentalité.     
+              <p class="the addm">Psychologue clinicienne de formation, je suis spécialisée dans la petite enfance, l'adolescence et la parentalité.     
               </p>
-              <p class="the">J'ai principalement exercé au sein d'institutions auprès d'enfants et d'adolescents ainsi qu'à l'hôpital. </p>
+              <p class="the addm">J'ai principalement exercé au sein d'institutions auprès d'enfants et d'adolescents ainsi qu'à l'hôpital. </p>
               <h4 class="under_title">MA FORMATION</h4>
-              <p class="the"><u>MASTER 2</u> "Psychopathologie clinique et psychanalyse" parcours "psychopathologie clinique infanto-juvénile et de la petite enfance" à l'université de Rennes 2.</p>   
-              <p class="the"><u>DIPLOME inter-universitaire</u> "Adolescents difficiles" à l'Université de Brest.</p>
-              <p class="the"><u>FORMATION QUALIFIANTE</u> "approche théorique et clinique de l'adoption" aux études psychanalitiques de Paris 7 Paris Diderot</p>   
-              <p class="the"><u>FORMATION</u> "Les adolescents auteurs de violences sexuelles" au CH Charles Perens, Bordeaux.</p>       
+              <p class="the addm"><u>MASTER 2</u> "Psychopathologie clinique et psychanalyse" parcours "psychopathologie clinique infanto-juvénile et de la petite enfance" à l'université de Rennes 2.</p>   
+              <p class="the addm"><u>DIPLOME inter-universitaire</u> "Adolescents difficiles" à l'Université de Brest.</p>
+              <p class="the addm"><u>FORMATION QUALIFIANTE</u> "approche théorique et clinique de l'adoption" aux études psychanalitiques de Paris 7 Paris Diderot</p>   
+              <p class="the addm"><u>FORMATION</u> "Les adolescents auteurs de violences sexuelles" au CH Charles Perens, Bordeaux.</p>       
               <h4 class="under_title">UNE PRATIQUE ADAPTEE A CHACUN</h4>
-              <p class="the">Formée à la psychanalyse, ma pratique s'appuie sur l'écoute et la singularité de la personne.</p>  
-              <p class="the">J'accueille avec neutralité et bienveillance toute personne en soufrance ou souhaitant une espace de parole à soi.</p>
+              <p class="the addm">Formée à la psychanalyse, ma pratique s'appuie sur l'écoute et la singularité de la personne.</p>  
+              <p class="the addm">J'accueille avec neutralité et bienveillance toute personne en soufrance ou souhaitant une espace de parole à soi.</p>
             </div>
         </div>
         <img class="rond trois none" alt="feuilles" src="img/menu.jpg" />
@@ -94,19 +94,19 @@
               <div class="flex">
                   <div class="child">
                       <h4 class="under_title">ENFANTS</h4>
-                      <p class="the">J'aide l'enfant qui manifeste des soucis d'ordre affectif, cognitif et / ou relationnel
+                      <p class="the addm">J'aide l'enfant qui manifeste des soucis d'ordre affectif, cognitif et / ou relationnel
                         pour l'accompagner au mieux dans son développement. Le premier rendez-vous sera organisé avec les parents.
                       </p>
                   </div>
                   <div class="teenager">
                       <h4 class="under_title">ADOLESCENTS</h4>
-                      <p class="the">J'accompagne tout jeune à s'exprimer et à mettre des mots sur sa souffrance. Je le soutiens psychologiquement pour qu'il
+                      <p class="the addm">J'accompagne tout jeune à s'exprimer et à mettre des mots sur sa souffrance. Je le soutiens psychologiquement pour qu'il
                         puisse s'apaiser et se senter mieux.
                       </p>
                   </div>
                   <div class="adult">
                       <h4 class="under_title">ADULTES</h4>
-                      <p class="the">Je soutiens toute personne en souffrance à exprimer son mal-être et ses affects. Je suis présente pour vous soutenir lors de tout évènement 
+                      <p class="the addm">Je soutiens toute personne en souffrance à exprimer son mal-être et ses affects. Je suis présente pour vous soutenir lors de tout évènement 
                         de votre vie. Je propose également un soutien à la parentalité.
                       </p>
                   </div>
