--- a/index.html
+++ b/index.html
@@ -51,14 +51,12 @@
                     <img class="symbole" alt="symbole psychologue" src="img/symbole.jpg" />
                     <p class="cabinet">CABINET</p>
                     <h1 class="name_psy">CHARLOTTE DURAND</h1>
-                    <h2 class="psycho1">- PSYCHOLOGUE CLINICIENNE -</h2>
+                    <h2 class="psycho1 top">- PSYCHOLOGUE CLINICIENNE -</h2>
                     <h2 class="psycho2">- PSYCHOTHERAPEUTE -</h2>
-                    <br />
-                    <h3>NOURRISSONS / ENFANTS / ADOLESCENTS / ADULTES / PARENTALITE</h3>
+                    <h3 class="top"><i>NOURRISSONS / ENFANTS / ADOLESCENTS / ADULTES / PARENTALITE</i></h3>
                 </div>
                 <div class="adresse">
                     <p>40220 TARNOS</p>
-                    <p class="tel">06 74 05 60 53</p>
                     <a class="a_button" href="#contact"><button class="button_acc">Contact</button></a>
                 </div>  
             </div>
