--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
               </p>
               <p class="the addm">J'ai principalement exercé au sein d'institutions auprès d'enfants et d'adolescents ainsi qu'à l'hôpital. </p>
               <h4 class="under_title">MA FORMATION</h4>
-              <p class="the addm"><u>MASTER 2</u> "Psychopathologie clinique et psychanalyse" parcours "psychopathologie clinique infanto-juvénile et de la petite enfance" à l'université de Rennes 2.</p>   
-              <p class="the addm"><u>DIPLOME inter-universitaire</u> "Adolescents difficiles" à l'Université de Brest.</p>
-              <p class="the addm"><u>FORMATION QUALIFIANTE</u> "approche théorique et clinique de l'adoption" aux études psychanalitiques de Paris 7 Paris Diderot</p>   
-              <p class="the addm"><u>FORMATION</u> "Les adolescents auteurs de violences sexuelles" au CH Charles Perens, Bordeaux.</p>       
+              <p class="the addm"><u>MASTER 2</u><i>"Psychopathologie clinique et psychanalyse" parcours "psychopathologie clinique infanto-juvénile et de la petite enfance" à l'université de Rennes 2.</i></p>   
+              <p class="the addm"><u>DIPLOME inter-universitaire</u><i>"Adolescents difficiles" à l'Université de Brest.</i></p>
+              <p class="the addm"><u>FORMATION QUALIFIANTE</u><i>"approche théorique et clinique de l'adoption"</i> aux études psychanalitiques de Paris 7 Paris Diderot</p>   
+              <p class="the addm"><u>FORMATION</u><i>"Les adolescents auteurs de violences sexuelles"</i> au CH Charles Perens, Bordeaux.</p>       
               <h4 class="under_title">UNE PRATIQUE ADAPTEE A CHACUN</h4>
               <p class="the addm">Formée à la psychanalyse, ma pratique s'appuie sur l'écoute et la singularité de la personne.</p>  
               <p class="the addm">J'accueille avec neutralité et bienveillance toute personne en soufrance ou souhaitant une espace de parole à soi.</p>
